[project]
name = "complete-sales-forecasting-system"
version = "0.1.0"
description = ""
authors = [
    {name = "oladimeji balogun",email = "oladimejib.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "mlflow (>=3.4.0,<4.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "pydantic (>=2.12.1,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "s3fs (>=2025.9.0,<2026.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "holidays (>=0.82,<0.83)",
    "httpx (>=0.28.1,<0.29.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "boto3 (==1.34.162)",
    "botocore (==1.34.162)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "apache-airflow (>=3.1.0,<4.0.0)",
    "pandera (>=0.26.1,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
